tests/snapshots/snapshots__budget_ts_pattern_src_types_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3999 tokens)

BuildMany.ts
     1→import { Iterator, IsOptionalKeysOf, UpdateAt, ValueOf } from './helpers';
     4→export type BuildMany …
    11→type BuildOne …
    19→export type SetDeep …

DeepExclude.ts
     1→import { DistributeMatchingUnions } from './DistributeUnions';
     3→export type DeepExclude<a, b> = Exclude<DistributeMatchingUnions<a, b>, b>;

DistributeUnions.ts
     1→import { BuildMany } from './BuildMany …
     2→import type { …
    15→import { IsMatching } from './IsMatching …
    18→ * DistributeMatchingUnions takes two arguments:
    19→ * - a data structure of type `a` containing unions
    20→ * - a pattern `p`, matching this data structure
    21→ * and turns it into a union of all possible
    22→ * combination of each unions contained in `a` that matches `p`.
    23→ *
    24→ * It does this in 3 main steps:
      → …
    41→export type DistributeMatchingUnions<a, p> = IsAny<a> extends true
    42→  ? any
    43→  : BuildMany<a, Distribute<FindUnionsMany<a, p>>>;
    46→export type FindUnionsMany …
    63→ * The reason we don't look further down the tree with lists,
    64→ * Set and Maps is that they can be heterogeneous,
    65→ * so matching on a A[] for a in input of (A|B)[]
    66→ * doesn't rule anything out. You can still have
    67→ * a (A|B)[] afterward. The same logic goes for Set and Maps.
    68→ *
    69→ * Kinds are types of types.
      → …
    80→export type FindUnions<
    81→  a,
    82→  p,
    83→  path extends PropertyKey[] = []
    84→> = unknown extends p
    85→  ? []
    86→  : IsAny<p> extends true
    87→  ? [] // Don't try to find unions after 5 levels
    88→  : Length<path> extends 5
    89→  ? []
    90→  : IsUnion<a> extends true
    91→  ? [
    92→      {
   174→export type ArrayToVariadicUnion …
   183→export type Distribute …

ExtractPreciseValue.ts
     1→import type { Override } from './Pattern';
     2→import type {
     3→  BuiltInObjects,
     4→  Compute,
     5→  Contains,
     6→  IsPlainObject,
     7→  IsReadonlyArray,
     8→  LeastUpperBound,
     9→  MaybeAddReadonly,
    10→  ValueOf,
    11→} from './helpers';
    13→export type ExtractPreciseValue …
    81→type ExtractPreciseArrayValue …

FindSelected.ts
     1→import type * as symbols from '../internals/symbols';
     2→import type { AnyMatcher, Matcher, Pattern } from './Pattern';
     3→import type {
     4→  Equal,
     5→  Primitives,
     6→  ValueOf,
     7→  MergeUnion,
     8→  IsUnion,
     9→} from './helpers';
    11→type SelectionsRecord …
    13→export type None …
    16→export type Some …
    21→export type SelectionType …
    24→type MapOptional …
    31→type MapList …
    38→type ReduceFindSelectionUnion …
    47→type FindSelectionUnionInArray …
    96→export type FindSelectionUnion …
   159→export type SeveralAnonymousSelectError …
   165→export type MixedNamedAndAnonymousSelectError …
   174→export type SelectionToArgs …
   185→export type Selections …
   191→export type FindSelected …

InvertPattern.ts
     1→import { DeepExclude } from './DeepExclude …
     2→import { …
    27→import type { Matcher, Pattern, Override, AnyMatcher } from './Pattern …
    29→type OptionalKeys …
    39→type ReduceUnion …
    47→type ReduceIntersection …
    55→type InvertArrayPattern …
   102→ * ### InvertPatternInternal
   103→ * Since patterns have special wildcard values, we need a way
   104→ * to transform a pattern into the type of value it represents
   106→export type InvertPattern<p, input> = Equal<Pattern<input>, p> extends true
   107→  ? never
   108→  : InvertPatternInternal<p, input>;
   110→type InvertPatternInternal …
   180→export type ReduceIntersectionForExclude …
   192→export type ReduceUnionForExclude …
   204→type ExcludeIfExists …
   231→type InvertArrayPatternForExclude …
   301→ * ### InvertPatternForExclude
   303→export type InvertPatternForExclude<p, i> = Equal<Pattern<i>, p> extends true
   304→  ? never
   305→  : InvertPatternForExcludeInternal<p, i>;
   307→type InvertPatternForExcludeInternal …

IsMatching.ts
     1→import { …
    12→type IsMatchingTuple …
    26→type IsMatchingArray …
    57→export type IsMatching …

Match.ts
     1→import type * as symbols from '../internals/symbols';
     2→import type { Pattern, MatchedValue } from './Pattern';
     3→import type { InvertPatternForExclude, InvertPattern } from './InvertPattern';
     4→import type { DeepExclude } from './DeepExclude';
     5→import type { Union, GuardValue, IsNever } from './helpers';
     6→import type { FindSelected } from './FindSelected';
     8→export type PickReturnValue<a, b> = a extends symbols.unset ? b : a;
    10→interface NonExhaustiveError<i> {
    14→interface TSPatternError<i> {
    19→ * #### Match
    20→ * An interface to create a pattern matching clause.
    22→export type Match<
    23→  i,
    24→  o,
    25→  handledCases extends any[] = [],
    26→  inferredOutput = never
    27→> = {
    28→  /**
   132→  with …
   154→   * `.when(predicate, handler)` Registers a predicate function and an handler function.
   155→   * If the predicate returns true, the handler function will be called.
   156→   *
      →   …
   159→  when<pred extends (value: i) => unknown, c, value extends GuardValue<pred>>(
   160→    predicate: pred,
   161→    handler: (value: value) => PickReturnValue<o, c>
   162→  ): pred extends (value: any) => value is infer narrowed
   163→    ? Match<
   164→        Exclude<i, narrowed>,
   165→        o,
   166→        [...handledCases, narrowed],
   167→        Union<inferredOutput, c>
   168→      >
   169→    : Match<i, o, handledCases, Union<inferredOutput, c>>;
   172→   * `.otherwise()` takes a **default handler function** that will be
   173→   * called if no previous pattern matched your input.
   174→   *
      →   …
   180→  otherwise<c>(
   181→    handler: (value: i) => PickReturnValue<o, c>
   182→  ): PickReturnValue<o, Union<inferredOutput, c>>;
   201→   * `.run()` return the resulting value.
   202→   *
   203→   * ⚠️ calling this function is unsafe, and may throw if no pattern matches your input.
   205→  run(): PickReturnValue<o, inferredOutput>;
   217→   * `.narrow()` narrows the input type to exclude all cases that have previously been handled.
   218→   *
   219→   * `.narrow()` is only useful if you want to excluded cases from union types or nullable
      →   …
   225→  narrow(): Match<DeepExcludeAll<i, handledCases>, o, [], inferredOutput>;
   245→type DeepExcludeAll<a, tupleList extends any[]> = [a] extends [never]
   246→  ? never
   247→  : tupleList extends [infer excluded, ...infer tail]
   248→  ? DeepExcludeAll<DeepExclude<a, excluded>, tail>
   249→  : a;
   251→type MakeTuples<ps extends readonly any[], value> = {
   261→type Exhaustive<output, inferredOutput> = {

Pattern.ts
     1→import type * as symbols from '../internals/symbols';
     2→import { MergeUnion, Primitives, WithDefault } from './helpers';
     3→import { None, Some, SelectionType } from './FindSelected';
     4→import { matcher } from '../patterns';
     5→import { ExtractPreciseValue } from './ExtractPreciseValue';
     7→export type MatcherType …
    23→export type MatcherProtocol …
    38→export type MatchResult …
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
    46→ * which returns an object with a `match()` method, taking
    47→ * the input value and returning whether the pattern matches
    48→ * or not, along with optional selections.
    50→export interface Matcher<
    51→  input,
    52→  narrowed,
    53→  // Type of what this pattern selected from the input
    54→  matcherType extends MatcherType = 'default',
    55→  selections extends SelectionType = None,
    56→  // Type to exclude from the input union because
    57→  // it has been fully matched by this pattern
    58→  excluded = narrowed
    59→> {
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    67→  // only used for array matchers
    68→  [symbols.isVariadic]?: boolean;
    69→}
    71→type PatternMatcher …
    74→export type MatchedValue …
    79→export type AnyMatcher …
    81→type UnknownMatcher …
    83→export type CustomP …
    94→export type ArrayP …
    96→export type RecordP …
   102→export type OptionalP …
   104→export type MapP …
   106→export type SetP …
   108→export type AndP …
   110→export type OrP …
   112→export type NotP …
   114→export type GuardP …
   116→export type GuardExcludeP …
   124→export type SelectP …
   130→export type AnonymousSelectP …
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   136→export type UnknownProperties …
   138→export type UnknownValuePattern …
   147→ * `Pattern<a>` is the generic type for patterns matching a value of type `a`. A pattern can be any (nested) javascript value.
   148→ *
   149→ * They can also be wildcards, like `P._`, `P.string`, `P.number`,
   150→ * or other matchers, like `P.when(predicate)`, `P.not(pattern)`, etc.
   151→ *
   152→ * [Read the documentation for `P.Pattern` on GitHub](https://github.com/gvergnaud/ts-pattern#patterns)
   153→ *
   154→ * @example
   155→ * const pattern: P.Pattern<User> = { name: P.string }
   157→export type Pattern<a = unknown> = unknown extends a
   158→  ? UnknownValuePattern
   159→  : KnownPattern<a>;
   161→type KnownPattern …
   163→type KnownPatternInternal …
   174→type ObjectPattern …
   180→type ArrayPattern …
   190→export type UnknownPattern …
   191→export type StringPattern …
   192→export type NumberPattern …
   193→export type BooleanPattern …
   194→export type BigIntPattern …
   195→export type SymbolPattern …
   196→export type NullishPattern …
   201→export type NonNullablePattern …
   203→type MergeGuards …
   210→export type Chainable …
   223→      optional …
   237→      and …
   253→      or …
   269→      select<input, k extends string>(
   270→        key: k
   271→      ): Chainable<SelectP<k, input, p>, omitted | 'select' | 'or' | 'and'>;
   276→export type StringChainable …
   291→      startsWith …
   306→      endsWith …
   321→      minLength …
   336→      length …
   351→      maxLength …
   366→      includes …
   381→      regex …
   391→export type NumberChainable …
   407→      between …
   423→      lt …
   438→      gt …
   453→      lte …
   468→      gte …
   483→      int …
   496→      finite …
   509→      positive …
   522→      negative …
   530→export type BigIntChainable …
   546→      between …
   562→      lt …
   577→      gt …
   592→      lte …
   607→      gte …
   622→      positive …
   635→      negative …
   643→export type Variadic …
   645→export type ArrayChainable …
   661→      optional …
   678→      select<input, k extends string>(
   679→        key: k
   680→      ): ArrayChainable<SelectP<k, input, pattern>, omitted | 'select'>;

helpers.ts
     1→export type ValueOf …
     3→export type Values …
     6→ * ### LeastUpperBound
     7→ * An interesting one. A type taking two imbricated sets and returning the
     8→ * smallest one.
     9→ * We need that because sometimes the pattern's inferred type holds more
    10→ * information than the value on which we are matching (if the value is any
    11→ * or unknown for instance).
    14→export type LeastUpperBound<a, b> = b extends a ? b : a extends b ? a : never;
    16→export type Contains …
    25→export type UnionToIntersection …
    31→export type IsUnion …
    33→export type UnionToTuple …
    42→export type Flatten …
    49→export type Equal …
    55→export type Expect …
    57→export type IsAny …
    59→export type IsNever …
    61→export type Length …
    63→export type Iterator …
    68→export type Next …
    69→export type Prev …
    73→export type Take …
    83→export type Drop …
    92→export type UpdateAt …
   105→export type BuiltInObjects …
   113→export type IsPlainObject …
   122→export type Compute …
   126→export type IntersectObjects …
   138→export type WithDefault …
   140→export type IsLiteral …
   164→export type Primitives …
   173→export type NonLiteralPrimitive …
   175→export type TupleKeys …
   177→export type Union …
   180→ * GuardValue returns the value guarded by a type guard function.
   182→export type GuardValue<fn> = fn extends (value: any) => value is infer b
   183→  ? b
   184→  : fn extends (value: infer a) => unknown
   185→  ? a
   186→  : never;
   188→export type GuardFunction …
   192→export type Some …
   196→export type All …
   200→export type Extends …
   202→export type Not …
   204→type AllKeys<a> = a extends any ? keyof a : never;
   207→export type MergeUnion …
   217→export type IsFixedSizeTuple …
   220→export type IsTuple …
   227→export type IsStrictArray …
   229→export type IsReadonlyArray …
   235→export type MaybeAddReadonly …
   240→export type MapKey …
   242→export type MapValue …
   244→export type SetValue …
   246→export type RecordKey …
   248→export type RecordValue …
   250→export type ReadonlyArrayValue …
   254→export type ExtractPlainObject …
   260→export type GetKey …
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}
   271→export type Call …
   275→export type IsOptionalKeysOf …
