tests/snapshots/snapshots__budget_ts_pattern_src_types_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (501 tokens)

DistributeUnions.ts
    41→export type DistributeMatchingUnions …
    80→export type FindUnions …

InvertPattern.ts
   106→export type InvertPattern …
   303→export type InvertPatternForExclude …

Match.ts
    10→interface NonExhaustiveError<i> {
    14→interface TSPatternError<i> {
    22→export type Match …
   132→  with …
   245→type DeepExcludeAll …
   261→type Exhaustive …

Pattern.ts
    43→/**
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
    46→ * which returns an object with a `match()` method, taking
    47→ * the input value and returning whether the pattern matches
    48→ * or not, along with optional selections.
      →…
    50→export interface Matcher<
    51→  input,
    52→  narrowed,
    53→  // Type of what this pattern selected from the input
    54→  matcherType extends MatcherType = 'default',
    55→  selections extends SelectionType = None,
    56→  // Type to exclude from the input union because
    57→  // it has been fully matched by this pattern
    58→  excluded = narrowed
    59→> {
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    67→  // only used for array matchers
    68→  [symbols.isVariadic]?: boolean;
    69→}
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   157→export type Pattern …
   269→      select …
   678→      select …

helpers.ts
    14→export type LeastUpperBound …
   182→export type GuardValue …
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}
