tests/snapshots/snapshots__budget_ts_pattern_types_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (11 words)

BuildMany.ts
DeepExclude.ts
DistributeUnions.ts
ExtractPreciseValue.ts
FindSelected.ts
InvertPattern.ts
IsMatching.ts
Match.ts
Pattern.ts
helpers.ts
index.ts
